# canonicalwebteam.store-base

./: .gitignore  README.md  pyproject.toml  renovate.json  setup.py  tox.ini
.github/workflow/: publish.yaml  tests.yaml
.github/workflows/: tests.yaml
canonicalwebteam/store_base/: app.py  authentication.py  config.py  handlers.py  helpers.py
canonicalwebteam/store_base/auth/: authentication.py  logic.py  views.py
canonicalwebteam/store_base/auth/login/: views.py
canonicalwebteam/store_base/sample_blueprint/: views.py
canonicalwebteam/store_base/store/: logic.py  views.py
canonicalwebteam/store_base/test_blueprint/: views.py
canonicalwebteam/store_base/utils/: config.py  constants.py  decorators.py  helpers.py
canonicalwebteam/templates/: 500.html
docs/: .readthedocs.yaml  .wordlist.txt  conf.py  index.rst
docs/.sphinx/: requirements.txt
docs/development/: endpoints.rst  index.rst
docs/how-to-use/: index.rst
docs/tutorial/: index.rst  install.rst  usage.rst
tests/: mock_data.py  test_helpers.py
tests/login/: test_login_handler.py
tests/store/: test_package_card_endpoint.py  test_packages.py  test_store_endpoint.py
