[tool.poetry]
name = "canonicalwebteam-store-base"
version = "0.1.0"
description = ""
authors = ["codeEmpress1 <halof.halima@gmail.com>"]
readme = "README.md"
packages = [{include = "canonicalwebteam"}]

[tool.poetry.dependencies]
"canonicalwebteam.flask-base" = "^1.0.6"
"canonicalwebteam.candid" = "^0.9.0"
"canonicalwebteam.discourse" = "^5.0.3"
"canonicalwebteam.blog" = "^6.4.0"
"canonicalwebteam.search" = "^1.2.7"
"canonicalwebteam.image-template" = "^1.3.1"
"canonicalwebteam.store-api" = "^4.0.0"
Flask-WTF = "^1.0.1"
humanize = "4.4.0"
mistune = "^2.0.4"
pybadges = "^3.0.0"
pymacaroons = "^0.13.0"
"ruamel.yaml" = "^0.16.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
